made AI 1.6x faster by minimax_based and also added inter-proccess communication between Python nand C++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,11 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "fstream": "cpp",
-        "set": "cpp"
-    }
+        "set": "cpp",
+        "ctime": "cpp"
+    },
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
