--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "shared_mutex": "cpp",
-        "climits": "cpp"
+        "climits": "cpp",
+        "ranges": "cpp"
     },
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
